# Exoplanet_Detection

./: README.md  main.py  pyproject.toml  submissions.ipynb
model/: Exoplanet_Detection.ipynb  submission.csv
model/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
model/catboost_info/learn/: events.out.tfevents
